2004-02-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/libpqxx.mak:
  - Added winsock32 library to link options (thanks Fred Moyer)
2004-02-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/config.h.in:
  - Removed redundant definitions
 src/connection_base.cxx:
  - Made unistd.h include conditional (thanks Fred Moyer)
2004-02-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/isolation.hxx:
  - Removed unused implemented() functions
 include/pqxx/libcompiler.h:
  - Trying PQXX_TYPENAME workaround for SUN compiler...
 test/test046.cxx, test/test049.cxx, test/test074.cxx:
  - Compile fixes, thanks Greg Webber!
2004-02-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/libcompiler.h:
  - Fixed SUN compiler version check (thanks Jon Meinecke, Greg Webber)
2004-02-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Check for functional count_if() (Jon Meinecke)
  - Several AC_TRY_COMPILE checks fixed
  - Stay in C++ mode, less Fortran stuff etc. in configure
 include/pqxx/connection_base.hxx, include/pqxx/libcompiler.h:
  - Workaround for Sun CC default argument problem (thanks Jon Meinecke)
 include/pqxx/largeobject.hxx
  - Workaround for Sun CC namespace lookup problem (Jon Meinecke)
 include/pqxx/largeobject.hxx, include/pqxx/result.hxx, src/largeobject.cxx,
 src/result.cxx:
  - Added some throw () where appropriate
 include/pqxx/result.hxx:
  - Fixed long-standing bug in LoseRef() - thanks Jon Meinecke!
 pqxx-config.in:
  - Added missing -L in --libs option (Arjen Baart)
 test/test049.cxx:
  - count_if() workaround (thanks Jon Meinecke)
 win32/libpqxx.mak:
  - Added pipeline
2004-02-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/libcompiler.h:
  - Set up for SUN Workshop workaround
2004-02-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h:
  - Workaround for SUN Workshop 6 (thanks Jon Meinecke)
 include/pqxx/pipeline.hxx, src/pipeline.cxx:
  - Typedef-wrapped container types to reduce std::pair<> trouble