@@ -117,8 +117,9 @@ TEST071: "$(OUTDIR)\test071.exe"
 TEST072: "$(OUTDIR)\test072.exe"
 TEST073: "$(OUTDIR)\test073.exe"
 TEST074: "$(OUTDIR)\test074.exe"
+TEST075: "$(OUTDIR)\test075.exe"
 
-ALL : TEST001 TEST002 TEST003 TEST004 TEST005 TEST006 TEST007 TEST008 TEST009 TEST010 TEST011 TEST012 TEST013 TEST014 TEST015 TEST016 TEST017 TEST018 TEST019 TEST020 TEST021 TEST022 TEST023 TEST024 TEST025 TEST026 TEST027 TEST028 TEST029 TEST030 TEST031 TEST032 TEST033 TEST034 TEST035 TEST036 TEST037 TEST038 TEST039 TEST040 TEST041 TEST042 TEST043 TEST044 TEST045 TEST046 TEST047 TEST048 TEST049 TEST050 TEST051 TEST052 TEST053 TEST054 TEST055 TEST056 TEST057 TEST058 TEST059 TEST060 TEST061 TEST062 TEST063 TEST064 TEST065 TEST066 TEST067 TEST068 TEST069 TEST070 TEST071 TEST072 TEST073 TEST074
+ALL : TEST001 TEST002 TEST003 TEST004 TEST005 TEST006 TEST007 TEST008 TEST009 TEST010 TEST011 TEST012 TEST013 TEST014 TEST015 TEST016 TEST017 TEST018 TEST019 TEST020 TEST021 TEST022 TEST023 TEST024 TEST025 TEST026 TEST027 TEST028 TEST029 TEST030 TEST031 TEST032 TEST033 TEST034 TEST035 TEST036 TEST037 TEST038 TEST039 TEST040 TEST041 TEST042 TEST043 TEST044 TEST045 TEST046 TEST047 TEST048 TEST049 TEST050 TEST051 TEST052 TEST053 TEST054 TEST055 TEST056 TEST057 TEST058 TEST059 TEST060 TEST061 TEST062 TEST063 TEST064 TEST065 TEST066 TEST067 TEST068 TEST069 TEST070 TEST071 TEST072 TEST073 TEST074 TEST075
 CLEAN :
          "$(INTDIR)" /Q
         -@erase "$(OUTDIR)\test*.exe" /Q
@@ -573,6 +574,12 @@ CLEAN :
 <<
         -@erase "$(INTDIR)" /Q
 
+"$(OUTDIR)\test075.exe" : "$(OUTDIR)" $(DEF_FILE) "$(INTDIR)\test075.obj"
+    @$(LINK32) @<<
+  $(LINK32_FLAGS) /out:"$(OUTDIR)\test075.exe" "$(INTDIR)\test075.obj"
+<<
+        -@erase "$(INTDIR)" /Q
+
 
 .c{$(INTDIR)}.obj::
    $(CPP) @<<
@@ -958,6 +965,11 @@ SOURCE=..\test\test073.cxx
 
 SOURCE=..\test\test074.cxx
 "$(INTDIR)\test074.obj" : $(SOURCE) "$(INTDIR)"
+        @$(CPP) $(CPP_PROJ) $(SOURCE)
+
+
+SOURCE=..\test\test075.cxx
+"$(INTDIR)\test075.obj" : $(SOURCE) "$(INTDIR)"
         @$(CPP) $(CPP_PROJ) $(SOURCE)
 
 
